@@ -20,7 +20,11 @@ debian/tmp@MOZ_LIBDIR@/extensions/\{972ce4c6-7e08-4474-a285-3208198ce6fd\} /usr/
 %%define SHIP_TESTPILOT
 %%endif
 %%ifdef SHIP_TESTPILOT
-debian/tmp@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi /usr/lib/@MOZ_APP_NAME@-addons/extensions
+%%ifdef MOZ_SYMLINKED_DIST
+debian/tmp@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi /usr/lib/@MOZ_APP_NAME@-addons/distribution/extensions
+%%else
+debian/tmp@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi @MOZ_LIBDIR@/distribution/extensions
+%%endif
 %%endif
 debian/tmp@MOZ_LIBDIR@/*.ini
 
