@@ -53,6 +53,11 @@ firefox-trunk (11.0~a1~hg20111208r82182-0ubuntu2) UNRELEASED; urgency=low
     - remove debian/firefox.xml.in
     - update debian/firefox-gnome-support.install.in
     - update debian/rules
+  * Ship Test Pilot as a distribution addon, like upstream. This means
+    that the addon manager can update it. It does also mean that it will
+    remain installed in users profiles if they try the beta or aurora
+    builds, but the Feedback button is disabled on release builds
+    - update debian/firefox.install.in
 
   [ Adam Conrad <adconrad@ubuntu.com> ]
   * Add missing build-dep on non-essential locales, since we use it.
@@ -62,7 +67,7 @@ firefox-trunk (11.0~a1~hg20111208r82182-0ubuntu2) UNRELEASED; urgency=low
   * debian/usr.bin.firefox.apparmor.12.04: don't use @{MOZ_LIBDIR} variable
     for the binary names
 
- -- Chris Coulson <chris.coulson@canonical.com>  Thu, 15 Dec 2011 12:14:55 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 15 Dec 2011 16:39:03 +0000
 
 firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu1) oneiric; urgency=low
 
